# Auto-apply

./: .gitignore  AGENTS.md  AutoApply_Runbook.xlsx  CLAUDE.md  LICENSE  Overnight AutoApply.bat  README.md  Run Plans Now.bat  Start AutoApply.bat  Stop AutoApply.bat  alembic_out.txt  docker-compose.yml  pyproject.toml  supervisord.conf
.claude/: settings.local.json
config/: .env.example  automation_plans.yaml  employer_cohort.v1.yaml  employer_supply_activation.v1.yaml  employer_supply_expansion.v1.yaml  material_defaults.yaml  portfolio.yaml  search_profiles.yaml  settings.yaml  settings.yaml.example  source_policy.yaml
config/targets/: ai-implementation.yaml  associate-solutions-engineering.yaml  revenue-operations-analyst.yaml  saas-implementation.yaml  technical-customer-success.yaml
config/taxonomies/: capabilities.v1.yaml  roles.v1.yaml
data/agent_traces/: 20260515T085328Z-40af664d.json  20260515T085328Z-45207c77.json  20260515T085328Z-6f9dabc9.json  20260515T085328Z-9da87505.json  20260515T085328Z-c94fc827.json  20260515T085328Z-f5b4b105.json  20260515T085329Z-139edbec.json  20260515T085329Z-2fde4709.json  20260515T085329Z-7b4396dc.json  20260515T085329Z-aedb1df1.json  20260515T085329Z-d59f7e55.json  20260515T085329Z-fe4f9a49.json  20260515T092534Z-10094df4.json  20260515T092534Z-2657fadc.json  20260515T092534Z-2f7ab7f1.json  20260515T092534Z-5a808a47.json  20260515T092534Z-88f7580e.json  20260515T092534Z-89dec84f.json  (+78 more)
docs/: AGENT_ARCHITECTURE.md  BRIEFS_FOR_CODE_AGENTS.md  CHANGELOG.md  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_zh.md  FRIEND_SETUP.md  FUNNEL_IDENTITY_HANDOFF.md  HANDOFF.md  INFRASTRUCTURE.md  JOB_POOL_V2_ARCHITECTURE.md  PHASE_HISTORY.md  PROJECT_MANAGEMENT.md  plan_en.md  plan_zh.md
frontend/: index.html  package-lock.json  vite.config.js
migrations/: env.py
scripts/: audit_plan_quality.py  build_blind_job_set.py  fix_company_display_names.py  import_companies_registry.py  migrate_profiles_v2.py  probe_employer_cohort.py  replay_discovery_run_v2.py  replay_job_pool_v2.py  resolve_adzuna_snippets.py  run_plans_now.py  sourcing_health.py  validate_employer_cohort.py
tests/: test_agent_cost.py  test_agent_cost_split.py  test_agent_cover_letter.py  test_agent_eval_form_filler.py  test_agent_form_filler.py  test_agent_tools_browser.py  test_agent_tools_jd.py  test_agent_tools_profile.py  test_agent_trace.py  test_application_cache.py  test_application_jobs_materials.py  test_application_profile.py  test_application_providers.py  test_cache_config.py  test_cache_connection.py  test_cache_lock.py  test_cache_lru.py  test_cache_namespace_validation.py  test_cache_orchestrator.py  test_cache_redis_backend.py  test_cli.py  test_cli_cleanup.py  test_cli_migrate.py  test_cli_phase_14.py  test_cli_provider.py  test_cli_redis.py  test_codex_review_fixes.py  test_config_bootstrap.py  test_documents.py  test_docx_patch.py  test_easy_apply_guard.py  test_embedding_cache.py  test_employer_supply_activation.py  test_execution.py  test_feedback_v2.py  test_fill_details.py  test_fitting_trim.py  test_full_jd_resolver.py  test_funnel_identity.py  test_gate_triggers.py  (+93 more)
(+324 files in other folders)
