[project]
name = "autoapply"
version = "0.7.0"
description = "AI-powered automated job application agent"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Liam Frost", email = "frostnova986@gmail.com" },
]
classifiers = [
    # PolyForm Noncommercial 1.0.0 is not on the OSI/SPDX standard list,
    # so we use the "Other/Proprietary" classifier. See LICENSE for full terms.
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "alembic>=1.13",
    # Config & CLI
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    # Document processing
    "python-docx>=1.1",
    "docx2pdf>=0.1.8",
    "pymupdf>=1.24",  # PDF text extraction (used by resume_importer)
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    # Browser automation
    "playwright>=1.49",
    # Web GUI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    # Cache (Phase 12). redis-py 5.x has the unified sync + asyncio
    # client; we use the sync client here because the cache layer
    # is consumed from sync call sites (`generate_text`, `embed_text`).
    "redis>=5.0",
    # Task queue (Phase 14). Celery owns task model + queue transport +
    # worker runtime + beat scheduling; AutoApplyTask layers tenant
    # context + idempotency + HITL + trace on top. See D025.
    "celery>=5.4",
    # Redis-backed Beat schedule store with leader election so multi-
    # instance Beat does not double-fire scheduled triggers. See D025.
    "celery-redbeat>=2.2",
]

[project.scripts]
autoapply = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    # In-memory Redis double for cache tests (Phase 12).
    "fakeredis>=2.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    # Phase 12 cache tests need an in-memory Redis double; kept in
    # both `[project.optional-dependencies].dev` (pip / wheel) and
    # `[dependency-groups].dev` (uv) so neither workflow is missing
    # the dep at test time.
    "fakeredis>=2.21",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
# License file is referenced via `project.license` (file = "LICENSE").
# Hatchling picks it up automatically; this section is kept for clarity.
allow-direct-references = false
